--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <div class='schedule container-fluid text-center p-0'>
                 <h1 class='py-5'>课程安排</h1>
                 <div class="row">
-                    <img src="images/classes/sc1.jpg" alt="classImg" class="col-md-6">
-                    <img src="images/classes/sc2.jpg" alt="classImg" class="col-md-6">
+                    <img src="images/classes/sc1.JPG" alt="classImg" class="col-md-6">
+                    <img src="images/classes/sc2.JPG" alt="classImg" class="col-md-6">
                 </div>
                 
             </div>
