--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                        
                     </div>
                     <div class="map col-md-6">
-                        这里是百度地图
+                        <div id="allmap" ></div>
                     </div>
                 </div>
             </div>
@@ -313,7 +313,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=xxxxxxx"></script>
     <script type="text/javascript" src="js/modelImg.js"></script>
     <script type="text/javascript" src="js/slideshow.js"></script>
+    <script type="text/javascript" src="js/loadmap.js"></script>
 </body>
 </html>
